<resources>
    <string name="app_name">PracticalParent</string>
    <string name="primaryColor">#63a0cd</string>
    <string name="accentColor">#cd8863</string>

    <string name="reset_timer">Reset Timer</string>
    <string name="minutes"> minutes</string>
    <string name="set_timer">Set Timer\n</string>
    <string name="pause_timer">Pause</string>
    <string name="resume_timer">Resume</string>

    <string name="choose_name">Name:</string>

    <string name="task_name">Name:</string>
    <string name="task_description">Description:</string>
    <string name="task_confirm">Confirm</string>
    <string name="task_cancel">Cancel</string>
    <string name="task_task">Task:</string>
    <string name="task_info_title">Task Info</string>
    <string name="task_list_title">Task List</string>
    <string name="childrenitem_name">Name</string>
    <string name="configure_title">Configure Children</string>
    <string name="edit_task_tasks">Tasks</string>
    <string name="results_flip_flip">Flip the coin</string>
    <string name="task_list_task">Tasks</string>
    <string name="task_list_edit">Edit</string>
    <string name="update_entername">"Enter a task name: e.g. Take out the trash"</string>
    <string name="update_enterdesc">"Enter a description: e.g. First bath"</string>

    <string name="practical_parent">Practical Parent</string>
    <string name="configuration">Configuration</string>
    <string name="flip_a_coin">Flip a coin</string>
    <string name="time_out">Time Out</string>
    <string name="by_sabri_isik_jared_murphy_jiatang_zhou_denys_dymnich">By: Sabri Isik, Jared Murphy, Jiatang Zhou, Denys Dymnich</string>
    <string name="title_activity_coin_flip">CoinFlipActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="would_you_like_to_choose_heads_or_tails">Would you like to choose Heads or Tails?</string>
    <string name="heads">Heads</string>
    <string name="tails">Tails</string>
    <string name="or">or</string>
    <string name="title_activity_flip_results">FlipResultsActivity</string>
    <string name="your_coin_is">Your coin is:</string>
    <string name="flip">Flip!</string>
    <string name="textview">TextView</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="sources">Sources</string>
    <string name="title_activity_configure_child">ConfigureChild</string>

    <string name="enterchild">Add Child:</string>
    <string name="nameexample">e.g. Jacob</string>
    <string name="currentList">Current Children:</string>
    <string name="changeTutorial">To edit name, click the child\'s name in the list above</string>
    <string name="saveChildUpdate">UPDATE</string>
    <string name="deleteButton">DELETE</string>

    <string name="coinflip.xml"><a href="https://www.google.com/logos/fnbx/coin_flip/coin_sheet.png">coinflip.xml</a></string>
    <string name="user_png"><a href="https://www.iconfinder.com/icons/1902270/add_new_ad_user_plus_icon">user.png:</a></string>
    <string name="timer_jpg"><a href="https://www.iconfinder.com/icons/3366121/clock_launcher_alarm_time_android_timer_icon">timer.jpg:</a></string>
    <string name="tail_png"><a href="https://www.shutterstock.com/image-vector/set-gold-coin-head-tail-isolated-1779736505">tail.png:</a></string>
    <string name="sunset_jpg"><a href="https://www.setaswall.com/landscape-wallpapers/landscape-phone-wallpaper-002-1080x2340/">sunset.jpg:</a></string>
    <string name="help_png"><a href="https://iconsplace.com/orange-icons/help-icon-11/">help.png:</a></string>
    <string name="heads_png"><a href="https://www.shutterstock.com/image-vector/set-gold-coin-head-tail-isolated-1779736505">heads.png:</a></string>
    <string name="coinflipsound_mp3"><a href="https://www.partnersinrhyme.com/soundfx/office_sounds/office_coin-flip_wav.shtml">CoinFlipSound.mp3:</a></string>
    <string name="ring_mp3"><a href="https://dl.prokerala.com/downloads/ringtones/files/mp3/7120-download-iphone-6-original-ringtone-42676.mp3">ring.mp3:</a></string>
    <string name="happy_school_ttf"><a href="https://www.fontspace.com/category/education">happy_school.ttf</a></string>
    <string name="team_mango"><a href="https://opencoursehub.cs.sfu.ca/bfraser/grav-cms/cmpt276/home">Team Mango</a></string>
    <string name="yoga.png"><a href="https://pngio.com/PNG/a86247-meditation-icon-png.html">yoga.png</a></string>
    <string name="relax.weba"><a href="https://www.youtube.com/watch?v=9tOJZQhO_Uw&amp;t=33s">relax.weba</a></string>
    <string name="take_breath_button"><a href="https://android--code.blogspot.com/2015/01/android-round-button.html">take_breath_button.xml</a></string>

    <string name="won_text"><![CDATA[<font color=\'#00ff00\'> WON!!</font>]]></string>
    <string name="loose_text"><![CDATA[<font color=\'#ff0000\'> LOST!!</font>]]></string>
    <string name="enter_child_name">Enter Name to Filter:</string>
    <string name="history_page_title">Coin Flip History</string>
    <string name="set_timer_page_title">Set Timer</string>
    <string name="lost_text"><![CDATA[<font color=\'#ff0000\'> LOST!!</font>]]></string>
    <string name="history">History</string>
    <string name="search_child_flipping_history">search child flipping history</string>
    <string name="would_you_like_to_pick_a_coin_again_for_yourself_or_any_other_kid">Would you like to pick a coin again for yourself or any other kid?</string>

    <string name="name_is_empty">Name should not be empty</string>
    <string name="task_is_empty">Please enter something for both task name and description</string>

    <string name="task_is_same">Sorry, please enter another task name</string>

    <string name="task_desc_is_same">Sorry, please enter another task description</string>

    <string name="both_task_is_same">Sorry, please enter another task name and description</string>
    <string name="enter_child_name_to_use">Sorry, please add a child to use the task list</string>

    <string name="name_already_exist">Name already exist</string>
    <string name="task_list">Task List</string>
    <string name="title_activity_save_child">Save Child</string>
    <string name="help">Help</string>
    <string name="no_camera_message">The current device does not have a camera</string>
    <string name="select_child">Select Child</string>
    <string name="config_child">Config Child</string>
    <string name="current_child">Current Child:</string>
    <string name="nobody">nobody</string>
    <string name="turn_switch_on_to_edit_click_on_task_to_do_so"><![CDATA[<- Turn switch on to edit; click on task to do so.]]></string>
    <string name="title_activity_task_info">TaskInfoActivity</string>
    <string name="title_activity_edit_task_list">EditTaskListActivity</string>
    <string name="title_activity_delete_task_list">DeleteTaskListActivity</string>
    <string name="tasks">Tasks</string>
    <string name="enter_a_task_name_e_g_take_out_the_trash">Enter a task name: e.g. Take out the trash</string>
    <string name="enter_a_description_for_the_task_e_g_first_bath">Enter a description for the task: e.g. First bath</string>
    <string name="title_activity_save_task">SaveTaskActivity</string>
    <string name="enter_a_description_e_g_first_bath">Enter a description: e.g. First bath</string>
    <string name="checkbox">checkbox</string>
    <string name="delete">Delete</string>
    <string name="cancel">cancel</string>
    <string name="speed_25">speed 25%</string>
    <string name="speed_50">speed 50%</string>
    <string name="speed_75">speed 75%</string>
    <string name="speed_100">speed 100%</string>
    <string name="speed_200">speed 200%</string>
    <string name="speed_300">speed 300%</string>
    <string name="speed_400">speed 400%</string>
    <string name="time_100">current speed 100%</string>
    <string name="speed_prefix">current&#160;</string>
    <string name="take_breath">Take Breath</string>
    <string name="title_activity_take_breath">TakeBreathActivity</string>
    <string name="begin">Begin</string>
    <string name="let_s_take_n_breaths_together">Let\'s take N breaths together</string>
    <string name="breath_in">Please hold button and breath in</string>
    <string name="breath_out">Release button and breath out</string>
    <string name="in">In</string>
    <string name="out">Out</string>
    <string name="good_job">Good job</string>
    <string name="_1">1</string>
    <string name="lets">Let\'s take </string>
    <string name="take"> breaths together</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
</resources>