<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#F0FF9800">

    <item
        android:id="@+id/speed_25"
        android:orderInCategory="100"
        android:title="@string/speed_25"
        app:showAsAction="withText" />
    <item
        android:id="@+id/speed_50"
        android:orderInCategory="101"
        android:title="@string/speed_50"
        app:showAsAction="withText" />
    <item
        android:id="@+id/speed_75"
        android:orderInCategory="102"
        android:title="@string/speed_75"
        app:showAsAction="withText" />
    <item
        android:id="@+id/speed_100"
        android:orderInCategory="103"
        android:title="@string/speed_100"
        app:showAsAction="withText" />
    <item
        android:id="@+id/speed_200"
        android:orderInCategory="104"
        android:title="@string/speed_200"
        app:showAsAction="withText" />
    <item
        android:id="@+id/speed_300"
        android:orderInCategory="105"
        android:title="@string/speed_300"
        app:showAsAction="withText" />
    <item
        android:id="@+id/speed_400"
        android:orderInCategory="106"
        android:title="@string/speed_400"
        app:showAsAction="withText" />


</menu>