<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@drawable/sunset">


    <TextView
        android:id="@+id/fontSource"
        android:layout_width="345dp"
        android:layout_height="38dp"
        android:fontFamily="@font/happy_school"
        android:gravity="center"
        android:text="@string/happy_school_ttf"
        android:textColor="#B50E0E0E"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ringSource" />

    <TextView
        android:id="@+id/ringSource"
        android:layout_width="223dp"
        android:layout_height="48dp"
        android:fontFamily="@font/happy_school"
        android:gravity="center"
        android:text="@string/ring_mp3"
        android:textColor="#B50E0E0E"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coinSoundSource" />

    <TextView
        android:id="@+id/coinSoundSource"
        android:layout_width="296dp"
        android:layout_height="47dp"
        android:fontFamily="@font/happy_school"
        android:gravity="center"
        android:text="@string/coinflipsound_mp3"
        android:textColor="#B50E0E0E"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userSource" />

    <TextView
        android:id="@+id/id_sources_text"
        android:layout_width="246dp"
        android:layout_height="70dp"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:fontFamily="@font/happy_school"
        android:gravity="center"
        android:text="@string/sources"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/coinFlipSource"
        android:layout_width="232dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/happy_school"
        android:gravity="center"
        android:text="@string/coinflip_xml"
        android:textColor="#B50E0E0E"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_sources_text" />

    <TextView
        android:id="@+id/headsSource"
        android:layout_width="223dp"
        android:layout_height="49dp"
        android:fontFamily="@font/happy_school"
        android:gravity="center"
        android:text="@string/heads_png"
        android:textColor="#B50E0E0E"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coinFlipSource" />

    <TextView
        android:id="@+id/helpSource"
        android:layout_width="223dp"
        android:layout_height="48dp"
        android:fontFamily="@font/happy_school"
        android:gravity="center"
        android:text="@string/help_png"
        android:textColor="#B50E0E0E"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headsSource" />

    <TextView
        android:id="@+id/sunsetSource"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:fontFamily="@font/happy_school"
        android:gravity="center"
        android:text="@string/sunset_jpg"
        android:textColor="#B50E0E0E"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helpSource" />

    <TextView
        android:id="@+id/tailsSource"
        android:layout_width="223dp"
        android:layout_height="38dp"
        android:fontFamily="@font/happy_school"
        android:gravity="center"
        android:text="@string/tail_png"
        android:textColor="#B50E0E0E"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sunsetSource" />

    <TextView
        android:id="@+id/timerSource"
        android:layout_width="223dp"
        android:layout_height="49dp"
        android:fontFamily="@font/happy_school"
        android:gravity="center"
        android:text="@string/timer_jpg"
        android:textColor="#B50E0E0E"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tailsSource" />

    <TextView
        android:id="@+id/userSource"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:fontFamily="@font/happy_school"
        android:gravity="center"
        android:text="@string/user_png"
        android:textColor="#B50E0E0E"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerSource" />
</androidx.constraintlayout.widget.ConstraintLayout>