<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@drawable/sunset">


    <TextView
        android:id="@+id/fontSource"
        android:layout_width="345dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:fontFamily="@font/happy_school"
        android:gravity="center"
        android:text="@string/happy_school_ttf"
        android:textColor="#B50E0E0E"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ringSource" />

    <TextView
        android:id="@+id/helpSource"
        android:layout_width="232dp"
        android:layout_height="44dp"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:fontFamily="@font/happy_school"
        android:gravity="center"
        android:text="@string/help_png"
        android:textColor="#B50E0E0E"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headsSource" />

    <TextView
        android:id="@+id/ringSource"
        android:layout_width="232dp"
        android:layout_height="44dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:fontFamily="@font/happy_school"
        android:gravity="center"
        android:text="@string/ring_mp3"
        android:textColor="#B50E0E0E"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coinSoundSource" />

    <TextView
        android:id="@+id/coinSoundSource"
        android:layout_width="295dp"
        android:layout_height="83dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:fontFamily="@font/happy_school"
        android:gravity="center"
        android:text="@string/coinflipsound_mp3"
        android:textColor="#B50E0E0E"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userSource" />

    <TextView
        android:id="@+id/coinFlipSource"
        android:layout_width="232dp"
        android:layout_height="44dp"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/happy_school"
        android:gravity="center"
        android:text="@string/coinflip_xml"
        android:textColor="#B50E0E0E"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_sources_tool_bar" />

    <TextView
        android:id="@+id/headsSource"
        android:layout_width="232dp"
        android:layout_height="44dp"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:fontFamily="@font/happy_school"
        android:gravity="center"
        android:text="@string/heads_png"
        android:textColor="#B50E0E0E"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coinFlipSource" />

    <TextView
        android:id="@+id/sunsetSource"
        android:layout_width="232dp"
        android:layout_height="44dp"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:fontFamily="@font/happy_school"
        android:gravity="center"
        android:text="@string/sunset_jpg"
        android:textColor="#B50E0E0E"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helpSource" />

    <TextView
        android:id="@+id/tailsSource"
        android:layout_width="232dp"
        android:layout_height="44dp"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:fontFamily="@font/happy_school"
        android:gravity="center"
        android:text="@string/tail_png"
        android:textColor="#B50E0E0E"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sunsetSource" />

    <TextView
        android:id="@+id/timerSource"
        android:layout_width="232dp"
        android:layout_height="44dp"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:fontFamily="@font/happy_school"
        android:gravity="center"
        android:text="@string/timer_jpg"
        android:textColor="#B50E0E0E"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tailsSource" />

    <TextView
        android:id="@+id/userSource"
        android:layout_width="232dp"
        android:layout_height="44dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:fontFamily="@font/happy_school"
        android:gravity="center"
        android:text="@string/user_png"
        android:textColor="#B50E0E0E"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerSource" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/id_sources_tool_bar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/sources"
        app:titleTextColor="#FFFFFF" />
</androidx.constraintlayout.widget.ConstraintLayout>