<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/id_update_task_name"
        android:layout_width="359dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/update_entername"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/id_update_task_desc"
        android:layout_width="359dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/update_enterdesc"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_update_task_name" />

    <Button
        android:id="@+id/id_saveChangeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="155dp"
        android:layout_marginRight="155dp"
        android:background="@color/colorAccent"
        android:text="@string/saveChildUpdate"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_update_task_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>