<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sunbackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <Button
        android:id="@+id/idHeads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/main_menu_buttons"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/heads"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/idTails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/main_menu_buttons"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/tails"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/idOr"
        android:layout_width="63dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/idTails"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/idHeads"
        app:layout_constraintTop_toTopOf="@+id/idHeads" />

    <TextView
        android:id="@+id/idAskQuestion"
        android:layout_width="387dp"
        android:layout_height="57dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:fontFamily="@font/happy_school"
        android:text="@string/would_you_like_to_choose_heads_or_tails"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idAskQuestion"
        app:srcCompat="@drawable/heads" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idAskQuestion"
        app:srcCompat="@drawable/tail" />
</androidx.constraintlayout.widget.ConstraintLayout>