<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sunset"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <Button
        android:id="@+id/id_heads_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/main_menu_buttons"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/heads"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_head_img" />

    <Button
        android:id="@+id/id_tails_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/main_menu_buttons"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/tails"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_tail_img" />

    <TextView
        android:id="@+id/id_or_text"
        android:layout_width="63dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/id_tails_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/id_heads_button"
        app:layout_constraintTop_toTopOf="@+id/id_heads_button" />

    <TextView
        android:id="@+id/id_ask_question_text"
        android:layout_width="387dp"
        android:layout_height="57dp"
        android:layout_marginTop="116dp"
        android:fontFamily="@font/happy_school"
        android:text="@string/would_you_like_to_choose_heads_or_tails"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/id_head_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_ask_question_text"
        app:srcCompat="@drawable/heads" />

    <ImageView
        android:id="@+id/id_tail_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_ask_question_text"
        app:srcCompat="@drawable/tail" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/id_choose_coin_toolbar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#F0FF9800"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Select your coin"
        app:titleTextColor="#FFFFFF" />
</androidx.constraintlayout.widget.ConstraintLayout>